plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.2'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.gdsc'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

bootJar {
    archiveFileName = 'app.jar'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'com.h2database:h2'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'


    testImplementation 'junit:junit:4.12'

    // Excel Upload
    implementation group: 'org.apache.poi', name: 'poi', version: '4.1.1'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.1'
    implementation 'commons-io:commons-io:2.11.0'
    implementation group: 'org.apache.tika', name: 'tika-core', version: '1.22'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"

    // Swagger(springdoc)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'

    // Spring Dotenv
    implementation 'me.paulschwarz:spring-dotenv:3.0.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
